switch to OSGi annotations and Testing PaxExam (fixes build)
git-svn-id: https://svn.apache.org/repos/asf/sling/trunk@1787588 13f79535-47bb-0310-9956-ffa450edef68